--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.lab430.controller.MainActivity">
-
+    <com.baoyz.widget.PullRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ListView
         android:id="@+id/PSInfoList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    </com.baoyz.widget.PullRefreshLayout>
 
 </LinearLayout>
