--- a/app/src/main/res/layout/basic_psinfo_list_item.xml
+++ b/app/src/main/res/layout/basic_psinfo_list_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="wrap_content"
@@ -80,5 +80,6 @@
         android:layout_marginTop="15dp"
         android:layout_below="@+id/elapsedtime"
         android:layout_alignLeft="@+id/elapsedtime"
-        android:layout_alignStart="@+id/elapsedtime" />
+        android:layout_alignStart="@+id/elapsedtime"
+        android:layout_marginBottom="30dp" />
 </RelativeLayout>
