--- a/app/src/main/res/layout/basic_psinfo_list_item.xml
+++ b/app/src/main/res/layout/basic_psinfo_list_item.xml
@@ -81,5 +81,6 @@
         android:layout_below="@+id/elapsedtime"
         android:layout_alignLeft="@+id/elapsedtime"
         android:layout_alignStart="@+id/elapsedtime"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp" />
 </RelativeLayout>
